--- a/Public_html/css/projects-page.css
+++ b/Public_html/css/projects-page.css
@@ -44,7 +44,8 @@
         grid-template-rows: auto auto;
         gap: 15px;
 
-        .bento-item {
+        .bento-item {   
+            cursor: pointer;
             background-color: #2a2a2a;
             border-radius: 30px;
             overflow: hidden;
@@ -57,6 +58,7 @@
                 transform: scale(0.97);
 
                 .arrow-border{
+                
                     background-color: var(--preto);
                         
                 }
@@ -81,6 +83,15 @@
                     display: block;
 
                 }
+
+                iframe{
+                    cursor: pointer;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    display: block;
+
+                }
             }
 
             .arrow-border {
@@ -97,6 +108,7 @@
                 background: rgba(0, 0, 0, 0.2);
                 -webkit-backdrop-filter: blur(10px);
                 .arrow{
+                    cursor: pointer;
                     color: white;
                     font-size: 30px;
                     transform: rotate(-45deg);
