--- a/Public_html/css/footer.css
+++ b/Public_html/css/footer.css
@@ -4,13 +4,12 @@
     scroll-margin-top: calc(var(--h-header) + 7.5em);
     background-color: var(--preto);
     position: relative;
-    height: 60vh;
+    height: 100vh;
     z-index: 0;
-    margin-top: -500px;
 }
 
 .footer-content {
-
+    
     .sentence {
         text-align: center;
         margin-bottom: 4rem;
@@ -102,11 +101,11 @@
     .footer {
         height: 100vh;
         z-index: 0;
-        margin-top: -750px;
+        
     }
 
     .footer-content {
-
+        margin-top: 10rem;
 
         .sentence {
             text-align: center;
@@ -193,5 +192,11 @@
                 }
             }
         }
+    }
+}
+
+@media (max-width: 1024px){
+    .footer-content {
+        
     }
 }
