--- a/Public_html/css/services-page.css
+++ b/Public_html/css/services-page.css
@@ -3,10 +3,10 @@
 .services-page {
     scroll-margin-top: calc(var(--h-header) + 7.5em);
     position: relative;
-    top: -490px;
     height: 100vh;
-    background: linear-gradient(to top, rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 100%);
-    z-index: 0;
+    /* background: linear-gradient(to top, rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 100%); */
+    background-color: var(--preto);
+    z-index: -10;
 }
 
 .services-page-content {
@@ -52,9 +52,7 @@
 @media (max-width: 768px) {
 
     .services-page {
-        top: -580px;
-        height: 150vh;
-        background: linear-gradient(to top, rgba(0, 0, 0, 1) 80%, rgba(0, 0, 0, 0) 100%);
+        height: 130vh;
     }
 
     .services-page-content {
