--- a/Public_html/css/contact-page.css
+++ b/Public_html/css/contact-page.css
@@ -135,3 +135,18 @@
 @media (max-width: 1024px) {
     
 }
+
+@media screen and (orientation: landscape) {
+    .contact-page{
+        height: 190vh;
+    }
+    .contact-page-text{
+        
+        .title{
+            h2{
+
+                font-size: 42px;
+            }
+        }
+    }
+}
