adjust on landscape responsivity

--- a/Public_html/css/about-page.css
+++ b/Public_html/css/about-page.css
@@ -4,7 +4,7 @@
     scroll-margin-top: calc(var(--h-header) + -9rem);
     background-color: var(--preto);
     background: radial-gradient(ellipse 60% 45% at center, #501d68e1, #000);
-    height: 120vh;
+    height: 140vh;
     z-index: 10;
 }
 
@@ -246,7 +246,7 @@
 }
 
 
-@media screen and (orientation: landscape) {
+@media screen and (orientation: landscape) and (max-width: 1024px) {
     .about-page {
         height: 250vh;
     }
