--- a/Public_html/css/contact-page.css
+++ b/Public_html/css/contact-page.css
@@ -136,7 +136,7 @@
     
 }
 
-@media screen and (orientation: landscape) {
+@media screen and (orientation: landscape)and (max-width: 1024px) {
     .contact-page{
         height: 190vh;
     }
