--- a/Public_html/css/projects-page.css
+++ b/Public_html/css/projects-page.css
@@ -194,7 +194,7 @@
     }
 }
 
-@media screen and (orientation: landscape) {
+@media screen and (orientation: landscape) and (max-width: 1024px) {
 
     .projects-page {
         height: 450vh;
