adjust on landscape responsivity

--- a/Public_html/css/header-section.css
+++ b/Public_html/css/header-section.css
@@ -142,7 +142,7 @@
 }
 
 
-@media (max-width: 915px)and (max-width: 1024px) {
+@media (max-width: 1400px){
 
     .header-content {
         .background-section {    
