--- a/Public_html/css/about-page.css
+++ b/Public_html/css/about-page.css
@@ -163,7 +163,7 @@
 @media (max-width: 768px) {
 
     .about-page {
-        height: 150vh;
+        height: 180vh;
     }
 
     .subcontainer-1 {
@@ -192,6 +192,8 @@
             }
 
             .profile-cards {
+                flex-direction: column;
+                gap: 1rem;
 
 
                 .profile-1 {}
@@ -214,6 +216,9 @@
         }
 
         .statistics-panel {
+
+            top: 100px;
+
             .statistics {
                 .item {
                     gap: 0rem;
@@ -241,7 +246,7 @@
 
 @media (max-width: 1024px) {
     .about-page {
-        height: 150vh;
+        height: 180vh;
     }
 }
 
@@ -267,6 +272,7 @@
         .block2 {
             height: 300px;
         }
+
         .statistics-panel {
             top: 100px;
         }
@@ -277,9 +283,11 @@
             display: flex;
             justify-content: center;
             gap: 2rem;
+
             .profile-1 {
                 margin-right: 0rem
             }
+
             .profile {
                 display: flex;
                 flex-direction: column;
