--- a/Public_html/css/services-page.css
+++ b/Public_html/css/services-page.css
@@ -2,7 +2,6 @@
 
 .services-page {
     scroll-margin-top: calc(var(--h-header) + 7.5em);
-    position: relative;
     height: 100vh;
     /* background: linear-gradient(to top, rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 100%); */
     background-color: var(--preto);
@@ -11,6 +10,8 @@
 
 .services-page-content {
     display: flex;
+    position: relative;
+    top: 200px;
 
     .block1 {
         width: 50%;
@@ -56,9 +57,10 @@
     }
 
     .services-page-content {
-
+        
         display: flex;
         flex-direction: column;
+        top: 80px;
 
         .block1 {
             width: 100%;
@@ -76,8 +78,6 @@
         }
 
         .block2 {
-
-
             width: 100%;
 
             .service {
@@ -96,8 +96,9 @@
                 }
             }
         }
+        
     }
-
+   
 
 }
 
@@ -108,5 +109,8 @@
 @media screen and (orientation: landscape)  and (max-width: 1024px){
     .services-page {
         height: 260vh;
+    }
+    .services-page-content{
+        top: 80px;
     }
 }
