--- a/Public_html/css/header-section.css
+++ b/Public_html/css/header-section.css
@@ -142,6 +142,20 @@
 }
 
 
+
+@media (max-width: 768px){
+    .brand-logo {
+        padding: 20px;
+
+        a {
+            img {
+                width: 45px;
+                height: 45px;
+            }
+        }
+    }
+}
+
 @media (max-width: 1400px){
 
     .header-content {
@@ -160,13 +174,14 @@
         background: rgba(0, 0, 0, 0.2);
         backdrop-filter: blur(10px);
         -webkit-backdrop-filter: blur(10px);
+
         .brand-logo {
             padding: 20px;
 
             a {
                 img {
-                    width: 65px;
-                    height: 65px;
+                    width: 55px;
+                    height: 55px;
                 }
             }
         }
