ajuste scrool behavior para mobile

--- a/Public_html/css/main.css
+++ b/Public_html/css/main.css
@@ -64,6 +64,10 @@ section {
 }
 
 @media (max-width: 768px) {
+    html{
+        scroll-behavior: auto;
+        
+    }
 
     .container {
         margin: 0 auto;
@@ -75,6 +79,9 @@ section {
 }
 
 @media (max-width: 1024px) {
+    html{
+        scroll-behavior: auto;
+    }
 
     .container {
         margin: 0 auto;
@@ -86,7 +93,10 @@ section {
 }
 
 @media (min-width: 1200px) {
-
+    html{
+        scroll-behavior: auto;
+    }
+    
     .container {
         max-width: 1920px;
     }
