--- a/Public_html/css/header-section.css
+++ b/Public_html/css/header-section.css
@@ -3,12 +3,12 @@
 .nav-block {
     position: fixed;
     display: flex;
-    justify-content: space-around;
-    width: 100%;
+    justify-content: space-between;
+    width:100%;
     top: 40px;
     z-index: 1;
-    gap: 20rem;
 
+    
     .brand-logo {
         padding: 10px 40px;
         cursor: pointer;
@@ -81,17 +81,17 @@
     }
 
     .social-icons-block {
+
         display: flex;
         gap: 1rem;
         padding: 10px 40px;
         justify-content: center;
         align-items: center;
 
-        .social-icons {
+        /* .social-icons { */
 
             .border {
                 border-radius: 50%;
-                padding: 20px;
                 height: 48px;
                 width: 48px;
                 display: flex;
@@ -116,9 +116,8 @@
                 }
 
             }
-        }
+        /* } */
     }
-
 }
 
 .header-content {
@@ -143,8 +142,12 @@
 
 
 
-@media (max-width: 768px){
+@media (max-width: 1400px){
     
+}
+
+@media (max-width: 768px){
+
     .brand-logo {
         padding: 20px;
 
@@ -155,9 +158,6 @@
             }
         }
     }
-}
-
-@media (max-width: 1400px){
 
     .header-content {
         .background-section {    
