--- a/Public_html/css/main.css
+++ b/Public_html/css/main.css
@@ -21,15 +21,12 @@
 }
 
 html {
-
     overflow-x: hidden !important;
 
     scroll-behavior: smooth;
     scrollbar-width: auto;
     /* largura da scrollbar: auto ou thin */
     scrollbar-color: #fff #000;
-
-
 }
 
 body {
@@ -44,8 +41,6 @@ section {
     width: 100%;
     height: 100vh;
 }
-
-
 .container {
     margin: 0 220px;
 }
@@ -84,11 +79,17 @@ section {
     }
 }
 
-@media (min-width: 1200px) {
+@media (max-width: 1200px) {
     .container {
-        max-width: 1920px;
+        margin: 0 auto;
+        /* Centraliza o conteúdo */
+        padding: 0 10px;
+        /* Espaçamento nas laterais */
+        max-width: calc(100% - 30px);
     }
 }
+
+
 
 @media(prefers-reduced-motion) {
     .leftToRight {
