--- a/Public_html/css/footer.css
+++ b/Public_html/css/footer.css
@@ -52,9 +52,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0px 150px;
+        width: 100%;
         gap: 2rem;
-
         .sentence {
             .title {
                 h2 {
@@ -151,7 +150,12 @@
             align-items: center;
             padding: 0px 10px;
            
-
+            .links-inner{
+                .nav-items{
+                    flex-direction: column;
+                    align-items: center;
+                }
+            }
             .sentence {
                 .title {
                     h2 {
