--- a/Public_html/css/about-page.css
+++ b/Public_html/css/about-page.css
@@ -244,10 +244,8 @@
     }
 }
 
-@media (max-width: 1024px) {
-    .about-page {
-        height: 180vh;
-    }
+@media (min-width: 769px) and (max-width: 1024px) {
+    
 }
 
 @media screen and (orientation: landscape) and (max-width: 1024px) {
