--- a/Public_html/css/footer.css
+++ b/Public_html/css/footer.css
@@ -53,7 +53,6 @@
         justify-content: space-between;
         align-items: center;
         width: 100%;
-        gap: 2rem;
         .sentence {
             .title {
                 h2 {
@@ -202,7 +201,7 @@
     }
 }
 
-@media (max-width: 1024px){
+@media (min-width: 769px) and (max-width: 1200px){
     
 }
 
