--- a/Public_html/css/services-page.css
+++ b/Public_html/css/services-page.css
@@ -2,7 +2,7 @@
 
 .services-page {
     scroll-margin-top: calc(var(--h-header) + -3em);
-    height: 120vh;
+    height: 130vh;
     /* background: linear-gradient(to top, rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 100%); */
     background-color: var(--preto);
     z-index: -10;
@@ -102,7 +102,7 @@
 
 }
 
-@media (max-width: 1024){
+@media (min-width: 769px) and (max-width: 1024){
      
 }
  
