--- a/Public_html/css/contact-page.css
+++ b/Public_html/css/contact-page.css
@@ -135,9 +135,11 @@
 
 }
 
-@media (min-width: 769px) and (max-width: 1024px) {
+@media  (min-width: 769px) and (max-width: 1440px) {
 
-
+    .contact-page{
+        height: 100vh;
+    }
     
 }
 
