--- a/Public_html/css/main.css
+++ b/Public_html/css/main.css
@@ -67,8 +67,7 @@ section {
         max-width: calc(100% - 30px);
     }
 }
-
-@media (max-width: 1024px) {
+@media (min-width: 769px) and (max-width: 1440px){
     .container {
         margin: 0 auto;
         /* Centraliza o conteúdo */
@@ -77,17 +76,6 @@ section {
         max-width: calc(100% - 30px);
     }
 }
-
-@media (max-width: 1200px) {
-    .container {
-        margin: 0 auto;
-        /* Centraliza o conteúdo */
-        padding: 0 10px;
-        /* Espaçamento nas laterais */
-        max-width: calc(100% - 30px);
-    }
-}
-
 
 
 @media(prefers-reduced-motion) {
