--- a/Public_html/css/about-page.css
+++ b/Public_html/css/about-page.css
@@ -249,7 +249,7 @@
     }
 }
 
-@media screen and (orientation: landscape)  {
+@media screen and (orientation: landscape) and (max-width: 1024px) {
     .about-page {
         height: 250vh;
     }
