--- a/Public_html/css/main.css
+++ b/Public_html/css/main.css
@@ -6,6 +6,7 @@
 @import url('home-page.css');
 @import url('projects-page.css');
 @import url('services-page.css');
+@import url('not_found.css');
 @import url('variables.css');
 
 @import url('https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap');
