--- a/Public_html/css/about-page.css
+++ b/Public_html/css/about-page.css
@@ -4,7 +4,8 @@
     scroll-margin-top: calc(var(--h-header) + -9rem);
     background-color: var(--preto);
     background: radial-gradient(ellipse 60% 45% at center, #501d68e1, #000);
-    height: 140vh;
+    height: 100%;
+    margin-bottom: 30rem;
     z-index: 10;
 }
 
@@ -112,6 +113,7 @@
     }
 
     .statistics-panel {
+        
         position: relative;
         top: 300px;
         height: 189px;
@@ -126,6 +128,7 @@
         color: var(--branco);
 
         .statistics {
+            
             text-align: center;
             display: flex;
             flex-direction: column;
@@ -163,7 +166,8 @@
 @media (max-width: 768px) {
 
     .about-page {
-        height: 180vh;
+        margin-bottom: 20rem;
+        /* height: 180vh; */
     }
 
     .subcontainer-1 {
@@ -245,13 +249,14 @@
 
 @media (min-width: 769px) and (max-width: 1440px){
     .about-page{
-        height: 180vh;
+        margin-bottom: 30rem;
+        /* height: 180vh; */
     }
 }
 
 @media screen and (orientation: landscape) and (max-width: 1024px) {
     .about-page {
-        height: 250vh;
+        /* height: 250vh; */
     }
 
     .about-page-content {
