--- a/Public_html/css/services-page.css
+++ b/Public_html/css/services-page.css
@@ -2,9 +2,11 @@
 
 .services-page {
     scroll-margin-top: calc(var(--h-header) + -3em);
-    height: 130vh;
     /* background: linear-gradient(to top, rgba(0, 0, 0, 1) 60%, rgba(0, 0, 0, 0) 100%); */
     background-color: var(--preto);
+    /* height: 130vh; */
+    height: 100%;
+    margin-bottom: 25rem;
     z-index: -10;
 }
 
@@ -53,7 +55,8 @@
 @media (max-width: 768px) {
 
     .services-page {
-        height: 160vh;
+        /* height: 160vh; */
+        margin-bottom: 10rem;
     }
 
     .services-page-content {
@@ -105,13 +108,15 @@
 @media (min-width: 769px) and (max-width: 1440px) {
 
     .services-page {
-        height:160vh ;
+        /* height:160vh ; */
+        margin-bottom: 20rem;
     }
 }
 
 @media screen and (orientation: landscape) and (max-width: 1024px) {
     .services-page {
-        height: 280vh;
+        /* height: 280vh; */
+        
     }
 
     .services-page-content {
